- final sync from scratch repo

--- a/README
+++ b/README
@@ -55,10 +55,14 @@ _*                              #       sample and reference data (if present)
 .log                            #       log files (if present)
 --------------------------------------------------------------------------------------------------------------------
 API Reference:
-/livecheck?repo=github/repo/url         (Under active development)
-                                        So far, the API ONLY accepts repos with the branch "gh-pages", in which the
-                                        packaged helm charts are stored. HelmQA will clone the repository and process
-                                        the charts. Then it will return a JSON object containing, for example,
-                                        duplicated values that can be consolidated in the "values.yaml" file.
+
+By git repository:
+    Description: You can call by git repository URL. API responds with status, code, and list of issues with the chart(s) in the repository.
+    API call:
+        - helmqa.com/livecheck?repo={git repository url}
+        Parameters:
+            repo: URL to git repository where Helm charts are stored
+        An example of an API call:
+            helmqa.com/livecheck?repo=https://github.com/mohammed-ali-1/zhaw-charts.git
 
 
